force-app/main/default/objects/Milestone__c/fields/DuplicateMilestone__c.field-meta.xml
<CustomField>
    <fullName>DuplicateMilestone__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Milestone</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>