force-app/main/default/objects/Milestone__c/fields/Last_Processed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Datetime__c</fullName>
    <label>Last Processed Datetime</label>
    <type>DateTime</type>
</CustomField>