force-app/main/default/objects/Milestone__c/fields/MilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>MilestoneValue__c</fullName>
    <inlineHelpText>Input whole numbers only</inlineHelpText>
    <label>Milestone Value</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>