force-app/main/default/objects/Milestone__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>TextArea</type>
</CustomField>