force-app/main/default/objects/Milestone__c/recordTypes/AgeInMonths.recordType-meta.xml
<RecordType>
    <fullName>AgeInMonths</fullName>
    <active>true</active>
    <description>Used to track Child&apos;s Age in Months</description>
    <label>Age In Months</label>
</RecordType>