force-app/main/default/objects/Milestone__c/recordTypes/LoyaltyLength.recordType-meta.xml
<RecordType>
    <fullName>LoyaltyLength</fullName>
    <active>true</active>
    <description>Customer&apos;s Loyalty Length in Months</description>
    <label>Loyalty Length</label>
</RecordType>