force-app/main/default/objects/Milestone__c/recordTypes/WeeksofPregnancy.recordType-meta.xml
<RecordType>
    <fullName>WeeksofPregnancy</fullName>
    <active>true</active>
    <description>Used to track Mother&apos;s Weeks of  Pregnancy</description>
    <label>Weeks of Pregnancy</label>
</RecordType>